FreeRTOSfromFreeRTOS/FreeRTOSv10.3.1/FreeRTOS/Demo/AVR_ATMega323_WinAVR/firstRun.txt
../../Source/portable/GCC/ATMega323/port.c:405:7: error: attempt to use poisoned "SIG_OUTPUT_COMPARE1A"
  void SIG_OUTPUT_COMPARE1A( void ) __attribute__ ( ( signal, naked ) );
       ^
../../Source/portable/GCC/ATMega323/port.c:406:7: error: attempt to use poisoned "SIG_OUTPUT_COMPARE1A"
  void SIG_OUTPUT_COMPARE1A( void )
       ^
serial/serial.c:188:9: error: attempt to use poisoned "SIG_UART_RECV"
 SIGNAL( SIG_UART_RECV )
         ^
serial/serial.c:207:9: error: attempt to use poisoned "SIG_UART_DATA"
 SIGNAL( SIG_UART_DATA )
         ^
../../Source/portable/GCC/ATMega323/port.c:405:7: error: attempt to use poisoned "SIG_OUTPUT_COMPARE1A"
  void SIG_OUTPUT_COMPARE1A( void ) __attribute__ ( ( signal, naked ) );
       ^
../../Source/portable/GCC/ATMega323/port.c:406:7: error: attempt to use poisoned "SIG_OUTPUT_COMPARE1A"
  void SIG_OUTPUT_COMPARE1A( void )
       ^
serial/serial.c:188:9: error: attempt to use poisoned "SIG_UART_RECV"
 SIGNAL( SIG_UART_RECV )
         ^
serial/serial.c:207:9: error: attempt to use poisoned "SIG_UART_DATA"
 SIGNAL( SIG_UART_DATA )
         ^
main.c:155:7: warning: return type of ‘main’ is not ‘int’ [-Wmain]
 short main( void )
       ^
serial/serial.c:188:9: error: attempt to use poisoned "SIG_UART_RECV"
 SIGNAL( SIG_UART_RECV )
         ^
In file included from serial/serial.c:52:0:
serial/serial.c: In function ‘SIG_UART_RECV’:
serial/serial.c:188:9: warning: ‘SIG_UART_RECV’ appears to be a misspelled signal handler, missing __vector prefix [-Wmisspelled-isr]
 SIGNAL( SIG_UART_RECV )
         ^
serial/serial.c: At top level:
serial/serial.c:207:9: error: attempt to use poisoned "SIG_UART_DATA"
 SIGNAL( SIG_UART_DATA )
         ^
In file included from serial/serial.c:52:0:
serial/serial.c: In function ‘SIG_UART_DATA’:
serial/serial.c:207:9: warning: ‘SIG_UART_DATA’ appears to be a misspelled signal handler, missing __vector prefix [-Wmisspelled-isr]
 SIGNAL( SIG_UART_DATA )
         ^
make: *** [serial/serial.o] Error 1
